# inverse-scaling-eval-pipeline

./: .gitignore  698gpt3.cache  README.md  gpt3.cache  pyproject.toml  run_anchoring_exp.sh  run_conj_exp.sh  test.sh
data/: QA_bias-v0.csv  QA_bias-v1-reversed.csv  QA_bias-v1.csv  anchoring.csv  anli_all.csv  boolq-1k.csv  boolq.csv  commonsense_overriding.csv  conjunction_fallacy-0shot.csv  conjunction_fallacy-1shot.csv  conjunction_fallacy.csv  dice-0shot.csv  dice-1shot.csv  escher.csv  fat-vs-thin-v1.csv  halo-effect.csv  lambada-1k.csv  lambada.csv  rte.csv  scope-neglect-0shot.csv  scope-neglect-1shot.csv  scope_neglect_ordinal.csv  sentiment-0shot.csv  sentiment-1shot.csv  sentiment_analysis.csv  syllogism-0shot-multitoken.csv  syllogism-1shot-multitoken.csv  syllogism-sample.csv
data_prep/: compile_QA_bias.py  compile_anchoring.py  compile_anli.py  compile_boolq.py  compile_conjunction_fallacies.py  compile_conjunction_fallacy.py  compile_fat_vs_thin.py  compile_gamblers_fallacy.py  compile_halo_effect.py  compile_imdb.py  compile_lambada.py  compile_rte.py  compile_scope_neglect.py  compile_scope_neglect_ordinal.py  compile_sentiment_analysis.py  compile_snli.py  compile_syllogism.py  compile_syllogisms.py  convert_type.py  gamblers_fallacy.py  generate_scope_neglect.py
docs/: distill-template.js  index.html  style.css
eval_pipeline/: combine_runs.py  compile_extension_fallacies.py  compile_syllogisms.py  convert_type.py  dataset.py  evaluate_QA.py  evaluate_anchoring.py  evaluate_logodds.py  gpt2.py  gpt3.py  hf_models.py  main.py  models.py  numeric_parser.py  openai_api.py  pipeline.py  plot_loss.py  temp.py  (+1 more)
(+453 files in other folders)
