[tool.poetry]
name = "eval-pipeline"
version = "0.1.0"
description = ""
authors = ["Ian McKenzie <ianmck98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
transformers = "^4.19"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
numpy = "^1.14.5"
matplotlib = "^3.5.1"
pandas = "^1.3"
ratelimit = "^2.2.1"
huggingface-hub = "^0.7.0"
accelerate = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
poethepoet = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.10.2+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"

